fix some bugs, add horizontal scroll by wheel on categories block

--- a/src/pages/home-page/categories-filter/categories-filter.scss
+++ b/src/pages/home-page/categories-filter/categories-filter.scss
@@ -4,14 +4,15 @@
     overflow: hidden;
     width: calc(100vw - ($navbar-width + 20px));
     min-width: 250px;
+
+    position: fixed;
+    z-index: 100;
 }
 
 .categories-filter__inner{
-    position: fixed;
-    top: 0;
-    left: 0;
-    margin: $header-height 0px 0px $navbar-width;
-    z-index: 100;
+    // position: fixed;
+    // margin: $header-height 0px 0px $navbar-width;
+    // z-index: 100;
     background: #121214;
 
     width: 100%;
