--- a/src/pages/home-page/home-page.scss
+++ b/src/pages/home-page/home-page.scss
@@ -4,7 +4,8 @@
     // padding-bottom: $header-height;
     width: 100%;
     max-height: 100%;
-    margin-top: $header-height;
-    margin: $header-height + $categories-height 0px 0px $navbar-width;
+    // margin-top: $header-height;
+    // margin: $header-height + $categories-height 0px 0px $navbar-width;
+    margin: $header-height 0px 0px $navbar-width;
     // overflow-y: auto;
 }
