--- a/src/pages/home-page/videos-list/videos-list.scss
+++ b/src/pages/home-page/videos-list/videos-list.scss
@@ -3,7 +3,7 @@
 .videos-list{
     // margin: 72px 0px 0px 120px;
     // max-width: calc(100% - $navbar-width);
-    padding: 10px;
+    padding: 72px 10px 10px 10px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
